style: remove ellipsis to prevent curl command cutoff

--- a/src/encoded/static/scss/encoded/modules/_static-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_static-pages.scss
@@ -1713,7 +1713,6 @@ body[data-pathname^="/data/benchmarking"] {
 					pre.curl-command {
 						border: 1px dashed #dedede;
 						padding: 5px;
-						text-overflow: ellipsis;
 					}
 					.curl-command-wrapper i.icon-copy {
 						margin-left: 5px;
